# sf-functions-python

./: .gitignore  CHANGELOG.md  README.md  dump-error-messages.sh  invoke.sh  pyproject.toml  user-facing-messages.md
.github/: dependabot.yml
.github/workflows/: check_changelog.yml  ci.yml
salesforce_functions/: __init__.py  __main__.py  __version__.py  context.py  data_api.py  invocation_event.py  testing.py
salesforce_functions/_internal/: app.py  cli.py  cloud_event.py  config.py  exceptions.py  function_loader.py  logging.py  user_function.py
salesforce_functions/data_api/: __init__.py  _requests.py  exceptions.py  record.py  reference_id.py  requests.py  unit_of_work.py
tests/: __init__.py  test_app.py  test_cli.py  test_cloud_event.py  test_config.py  test_data_api.py  test_function_loader.py  test_main.py  utils.py
tests/fixtures/basic/: main.py  project.toml
tests/fixtures/data_api/: main.py  project.toml
tests/fixtures/hello-world/: main.py
tests/fixtures/imports_absolute/: main.py
tests/fixtures/imports_absolute/example_module/: __init__.py
tests/fixtures/imports_relative/: main.py
tests/fixtures/invalid_missing_function/: main.py
tests/fixtures/invalid_not_a_function/: main.py
tests/fixtures/invalid_not_async/: main.py
tests/fixtures/invalid_number_of_args/: main.py
tests/fixtures/invalid_syntax_error/: main.py
tests/fixtures/logging/: main.py
tests/fixtures/project_toml_api_version_invalid/: project.toml
tests/fixtures/project_toml_api_version_missing/: project.toml
tests/fixtures/project_toml_api_version_too_old/: project.toml
tests/fixtures/project_toml_api_version_triple_digits/: project.toml
tests/fixtures/project_toml_api_version_wrong_type/: project.toml
tests/fixtures/project_toml_salesforce_table_wrong_type/: project.toml
tests/fixtures/raises_exception_at_runtime/: main.py
tests/fixtures/return_value_not_serializable/: main.py
tests/fixtures/returns_context/: main.py
tests/fixtures/returns_event/: main.py
tests/fixtures/template/: main.py  project.toml
tests/fixtures/template/tests/: test_main.py
tests/fixtures/without_type_annotations/: main.py
tests/wiremock/mappings/: composite-graph-create-tree.json  composite-graph-create.json  composite-graph-single-create-error.json  composite-graph-single-delete.json  composite-graph-single-update.json  create-binary-data.json  create-invalid-field.json  create-invalid-picklist-value.json  create-required-field-missing.json  create-unknown-object.json  create.json  delete-already-deleted.json  delete.json  query-binary-data-subsequent-request.json  query-binary-data.json  query-malformed-soql.json  query-unexpected-response.json  query-unknown-column.json  query-with-associated-data.json  query-with-next-records-url-2.json  query-with-next-records-url.json  query-with-subquery.json  query.json  update-binary-data.json  update-invalid-field.json  update-malformed-id.json  update.json
