[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salesforce-functions"
description = "Python support for Salesforce Functions"
readme = "README.md"
license = "BSD-3-Clause"
dynamic = ["version"]
requires-python = ">=3.10"
# httptools and uvloop are optional uvicorn dependencies that improve performance.
dependencies = [
    "aiohttp>=3.8.3,<4",
    "httptools>=0.5.0,<0.6",
    "orjson>=3.8.1,<4",
    "starlette>=0.21.0,<0.22",
    "structlog>=22.1.0,<23",
    "uvicorn>=0.19.0,<0.20",
    "uvloop>=0.17.0,<0.18; sys_platform != 'win32' and sys_platform != 'cygwin'",
]

[project.optional-dependencies]
lint = [
    "black==22.10.0",
    "flake8==5.0.4",
]
test = [
    # httpx is required for starlette's `TestClient`.
    "httpx==0.23.0",
    "pytest==7.2.0",
]

[project.scripts]
sf-functions-python = "salesforce_functions._internal.cli:main"

[project.urls]
Source = "https://github.com/heroku/sf-functions-python"

[tool.hatch.build]
packages = ["salesforce_functions"]

[tool.hatch.envs.default]
features = [
    "lint",
    "test",
]

[tool.hatch.version]
path = "salesforce_functions/__version__.py"

[tool.black]
target-version = ['py310', 'py311']
extend-exclude = "(tests/fixtures/invalid_syntax_error/main.py)"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    # This filter can be removed once httpx has a release that includes this change:
    # https://github.com/encode/httpx/pull/2309
    "ignore:'cgi' is deprecated:DeprecationWarning:httpx",
]
testpaths = ["tests"]
xfail_strict = true
